--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student SideHustle Hub</title>
+  <title>Trabahanap</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <nav class="navbar">
-    <div class="logo">SideHustle</div>
+    <div class="logo">Trabahanap</div>
     <ul class="nav-links">
       <li><button onclick="showSection('find-job')">Find Job</button></li>
       <li><button onclick="showSection('look-client')">Look for Client</button></li>
@@ -33,7 +33,7 @@
       <div class="filter">
         <label for="collegeFilter">Filter by College:</label>
         <select id="collegeFilter" onchange="filterByCollege()">
-          <option value="">All Colleges</option>
+          <option value="">All Colleges</option>x
           <option value="computing studies">College of Computing Studies</option>
           <option value="liberal arts">College of Liberal Arts</option>
           <option value="engineering">College of Engineering</option>
