--- a/landing.html
+++ b/landing.html
@@ -3,21 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trabahanap - Landing</title>
+  <title>Landing</title>
   <link rel="stylesheet" href="landing.css" />
 </head>
-<body>
-  <!-- Loader Start -->
-<div id="loader">
-  <div class="spinner"></div>
-</div>
-<!-- Loader End -->
+<body> 
   <header>
     <div class="logo" onclick="window.location.href='landingPage.html'">
       <img src="images/wmsu.JPG" alt="" style="border-radius: 50%;">
       <img src="images/ccs.jpg" alt="" style="border-radius: 50%;">
-      Trabahanap
-    </div>
+      Trabahanap</div>
     <nav>
       <ul>
         <li><a href="#hero">Home</a></li>
@@ -128,39 +122,22 @@
       </div>
 
       <div class="about-pic">
-        <img src="images/anime2.png" alt="About picture" />
+        <img src="images/anime2.png" alt="image" />
       </div>
     </div>
   </section>
 
   <div class="signin-overlay" id="signin-overlay" style="display: none;">
     <div class="signin-container" id="signin-box">
-      <button class="signin-close" onclick="signinCloseModal()">×</button>
-      <h2>Sign In</h2>
-      <form>
-        <input type="text" placeholder="Email" required />
-        <input type="password" placeholder="Password" required />
-        <button type="submit">Log In</button>
-      </form>
+      <p class="signin-close" onclick="signinCloseModal()">×</p>
     </div>
   </div>
 
   <div id="signup-overlay" style="display: none;">
     <div id="signup-box">
-      <button class="signup-close" onclick="signinCloseModal()">×</button>
-      <h2>Sign Up</h2>
-      <form id="signup-form">
-        <input type="text" placeholder="Name" required />
-        <input type="email" placeholder="Email" required />
-        <input type="password" placeholder="Password" required />
-        <button type="submit">Register</button>
-      </form>
+      <button class="signin-close" onclick="signinCloseModal()">×</button>
     </div>
   </div>
-
-  <footer>
-    <p>&copy; 2025 Trabahanap | All Rights Reserved</p>
-  </footer>
 
   <script src="landing.js"></script>
 </body>
